Bnode round-tripping, rdf i/o and test support
- Implemented bnode round-tripping
- now using i/o from the rdf library